{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 391,
  "lineage": "4d1747a2-4fc1-2ce5-ad36-6aea599d13c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_app_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7620d611d3ceae4",
            "arn": "arn:aws:ec2:us-east-1:414092415776:instance/i-0fa3cb1d51ac7a3bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa3cb1d51ac7a3bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo1_ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-077fe15de90647d55"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077fe15de90647d55",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-3-87-64-16.compute-1.amazonaws.com",
            "public_ip": "3.87.64.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba792797ab2e305b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f02e1cb6a14f1f5",
            "tags": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_app_server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0055f4147b3bd2eff"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.demo1_ec2_key",
            "aws_network_interface.ec2_nic1_as1",
            "aws_security_group.demo1_app_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo1_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:internet-gateway/igw-0b57839f5fa0581fd",
            "id": "igw-0b57839f5fa0581fd",
            "owner_id": "414092415776",
            "tags": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_igw"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_private_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-acl/acl-0a7d8436798f5e179",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0a7d8436798f5e179",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/23",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 5432
              }
            ],
            "owner_id": "414092415776",
            "subnet_ids": [
              "subnet-093cb34a32719855f",
              "subnet-09d8130b0c8688be0"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_sub_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_sub_acl"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo1_public_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-acl/acl-0f136e86d9822329c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 110,
                "to_port": 0
              }
            ],
            "id": "acl-0f136e86d9822329c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "122.51.33.105/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 121,
                "to_port": 22
              }
            ],
            "owner_id": "414092415776",
            "subnet_ids": [
              "subnet-09f02e1cb6a14f1f5",
              "subnet-0d1a863ff53bcc86b"
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_sub_acl"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_sub_acl"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_private_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0a215ee38082dc1b3",
            "network_acl_id": "acl-0a7d8436798f5e179",
            "subnet_id": "subnet-09d8130b0c8688be0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b4f5f0b49716ce8f",
            "network_acl_id": "acl-0a7d8436798f5e179",
            "subnet_id": "subnet-093cb34a32719855f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo1_public_sub_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00cc1dab2aa3220c5",
            "network_acl_id": "acl-0f136e86d9822329c",
            "subnet_id": "subnet-09f02e1cb6a14f1f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-083627668cebcf679",
            "network_acl_id": "acl-0f136e86d9822329c",
            "subnet_id": "subnet-0d1a863ff53bcc86b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": false,
            "from_port": 5432,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-91691028",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a7d8436798f5e179",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_ephemeral_ports_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1121812241",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_http_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2187597191",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_https_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1609747458",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_in_ssh_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "181.51.33.104/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3795361996",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "122.51.33.105/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2040392867",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 121,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_inner_out_pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2728726010",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_db_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/23",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2620692966",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a7d8436798f5e179",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_private_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_out_pub_sub_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2275072119",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f136e86d9822329c",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.demo1_public_sub_acl",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ec2_nic1_as1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:network-interface/eni-077fe15de90647d55",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f150f00c93c83db4",
                "device_index": 0,
                "instance": "i-0fa3cb1d51ac7a3bf"
              }
            ],
            "id": "eni-077fe15de90647d55",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:48:0a:0d:5a:f3",
            "owner_id": "414092415776",
            "private_dns_name": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "private_ip_list": [
              "10.0.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0055f4147b3bd2eff"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f02e1cb6a14f1f5",
            "tags": {
              "Name": "ec2_nic1_as1"
            },
            "tags_all": {
              "Name": "ec2_nic1_as1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b57839f5fa0581fd",
            "id": "r-rtb-0e7091d87b0325d7e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e7091d87b0325d7e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo1_igw",
            "aws_route_table.demo1_public_rt",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-04baefadf656f3bd8",
            "id": "rtb-04baefadf656f3bd8",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-014eb844d78f4b1f1",
            "id": "rtb-014eb844d78f4b1f1",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:route-table/rtb-0e7091d87b0325d7e",
            "id": "rtb-0e7091d87b0325d7e",
            "owner_id": "414092415776",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b57839f5fa0581fd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnets__rt"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnets__rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07714a372f45b3bbf",
            "route_table_id": "rtb-04baefadf656f3bd8",
            "subnet_id": "subnet-09d8130b0c8688be0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0129c5905d4a98549",
            "route_table_id": "rtb-014eb844d78f4b1f1",
            "subnet_id": "subnet-093cb34a32719855f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_private_rt",
            "aws_subnet.demo1_private_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00abc8e2529ea8bba",
            "route_table_id": "rtb-0e7091d87b0325d7e",
            "subnet_id": "subnet-09f02e1cb6a14f1f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06866ebcc02b034d6",
            "route_table_id": "rtb-0e7091d87b0325d7e",
            "subnet_id": "subnet-0d1a863ff53bcc86b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.demo1_public_rt",
            "aws_subnet.demo1_public_subnet",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group/sg-0055f4147b3bd2eff",
            "description": "Manage inbound and outbound traffic for the app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0055f4147b3bd2eff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "122.51.33.105/32",
                  "181.51.33.104/32"
                ],
                "description": "Allow inbound SSH from admins IPs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo1_app_server_sg",
            "name_prefix": "",
            "owner_id": "414092415776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group/sg-0d258f3bb84e67696",
            "description": "Manage inbound and outbound traffic for the db servers",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound db traffic to app servers",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0055f4147b3bd2eff"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d258f3bb84e67696",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound db traffic from app servers",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0055f4147b3bd2eff"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "demo1_db_server_sg",
            "name_prefix": "",
            "owner_id": "414092415776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev"
            },
            "tags_all": {
              "Env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-09d8130b0c8688be0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8130b0c8688be0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet1"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "private_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-093cb34a32719855f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093cb34a32719855f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_private_subnet2"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-09f02e1cb6a14f1f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f02e1cb6a14f1f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet1"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "public_subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:subnet/subnet-0d1a863ff53bcc86b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1a863ff53bcc86b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414092415776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1_public_subnet2"
            },
            "vpc_id": "vpc-0980563da20b8854e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:vpc/vpc-0980563da20b8854e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0515ba36b947b1453",
            "default_route_table_id": "rtb-0de8adaff5f406217",
            "default_security_group_id": "sg-09caab75a7b2810db",
            "dhcp_options_id": "dopt-0905042eb1ce7477e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0980563da20b8854e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de8adaff5f406217",
            "owner_id": "414092415776",
            "tags": {
              "Env": "dev",
              "Name": "demo1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "demo1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_app_server_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-019df17d445f711ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic to anywhere",
            "from_port": -1,
            "id": "sgr-019df17d445f711ae",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_rule_id": "sgr-019df17d445f711ae",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0f6830d8dbf7639a4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow outbound db traffic to app servers",
            "from_port": 1024,
            "id": "sgr-0f6830d8dbf7639a4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_id": "sg-0d258f3bb84e67696",
            "security_group_rule_id": "sgr-0f6830d8dbf7639a4",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_db_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-08d27e165eca81689",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound db traffic from app servers",
            "from_port": 5432,
            "id": "sgr-08d27e165eca81689",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_id": "sg-0d258f3bb84e67696",
            "security_group_rule_id": "sgr-08d27e165eca81689",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_security_group.demo1_db_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-029e4c5a64a57083a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-029e4c5a64a57083a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_rule_id": "sgr-029e4c5a64a57083a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_https_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-07e2ff27fbae527b0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-07e2ff27fbae527b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_rule_id": "sgr-07e2ff27fbae527b0",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_in_ssh_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app_server_122.51.33.105/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0b3a4f60e00f52817",
            "cidr_ipv4": "122.51.33.105/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-0b3a4f60e00f52817",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_rule_id": "sgr-0b3a4f60e00f52817",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        },
        {
          "index_key": "app_server_181.51.33.104/32",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:414092415776:security-group-rule/sgr-0c2c91343523c455e",
            "cidr_ipv4": "181.51.33.104/32",
            "cidr_ipv6": null,
            "description": "Allow inbound SSH from admins IPs",
            "from_port": 22,
            "id": "sgr-0c2c91343523c455e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0055f4147b3bd2eff",
            "security_group_rule_id": "sgr-0c2c91343523c455e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.demo1_app_server_sg",
            "aws_vpc.demo1"
          ]
        }
      ]
    }
  ]
}